<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_marginHorizontal="@dimen/_20sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/sticker_photo"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:fontFamily="@font/lemonada_bold"
        android:textColor="@color/white"
        android:lineHeight="@dimen/_5sdp"
        android:textSize="@dimen/_17sdp"
        android:text="@string/Regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <TextView
        android:id="@+id/tvDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StickerWithPhoto"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_20sdp"
        style="@style/roboto13"
        android:textColor="#404040"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvDes"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardBackgroundColor="#FDEBEE"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_20sdp">
        <TextView
            android:id="@+id/btnDIY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF7B90"
            android:text="@string/DIYNow"
            style="@style/roboto13"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_5sdp"/>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>