<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#00000000"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/bg_white"
        android:layout_margin="@dimen/_10sdp"
        android:paddingVertical="@dimen/_20sdp"
        android:paddingHorizontal="@dimen/_30sdp">
        <ImageView
            android:id="@+id/img"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:src="@drawable/rate_0"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_Title"
            style="@style/robotoMedium15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:ellipsize="marquee"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/title_rate_0"
            android:textColor="#1D1D1D" />

        <TextView
            android:id="@+id/tvDes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#A9B0BE"
            style="@style/roboto13"
            android:text="@string/des_rate_0"/>

        <com.willy.ratingbar.ScaleRatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvContentRate"
            app:srb_clearRatingEnabled="true"
            app:srb_clickable="true"
            android:layout_marginTop="@dimen/_8sdp"
            app:srb_drawableFilled="@drawable/ic_star_on"
            app:srb_drawableEmpty="@drawable/ic_star_off"
            app:srb_isIndicator="false"
            app:srb_numStars="5"
            app:srb_rating="0"
            app:srb_scrollable="true" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_39sdp"
            android:background="@drawable/bg_button_rate"
            android:fontFamily="@font/roboto_medium"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_15sdp"
            android:textAllCaps="false"
            android:layout_marginVertical="@dimen/_8sdp"
            android:text="@string/btn_rate"/>

        <TextView
            android:id="@+id/tv_Exit"
            android:fontFamily="@font/roboto_medium"
            android:textSize="@dimen/_11ssp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/btn_exit"
            android:textColor="#BEC7D8" />

    </LinearLayout>

</LinearLayout>


