<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/bg_type_face"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:weightSum="4">

        <TextView
            android:id="@+id/btnText"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Text"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            style="@style/roboto13"
            android:textColor="@color/white"
            android:background="@drawable/bg_selector_font"
            android:paddingVertical="@dimen/_5sdp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/btnBackground"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Background"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            style="@style/roboto13"
            android:paddingVertical="@dimen/_5sdp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/btnBorder"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:text="@string/Border"
            style="@style/roboto13"
            android:paddingVertical="@dimen/_5sdp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/btnShadow"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Shadow"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            style="@style/roboto13"
            android:paddingVertical="@dimen/_5sdp"
            android:gravity="center"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvPaint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_paint"
        android:layout_marginHorizontal="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/layoutTitle"
        app:layout_constraintBottom_toTopOf="@id/seekBarColor"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"/>

    <SeekBar
        android:id="@+id/seekBarColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxHeight="@dimen/_28sdp"
        android:progress="100"
        android:progressDrawable="@drawable/custom_seekbar_paint"
        android:splitTrack="false"
        android:overScrollMode="never"
        android:thumb="@drawable/thumup"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/_10sdp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>