<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_intro_1"
    tools:context=".ui.activity.IntroActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpTutorial"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="@dimen/_3ssp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

    </androidx.viewpager2.widget.ViewPager2>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="@dimen/_5sdp"
        android:background="@drawable/bg_intro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal">


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/coiny"
            android:text="@string/title_intro1"
            android:textColor="@color/blue78CFCE"
            android:singleLine="true"
            android:textSize="@dimen/_24sdp"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:textColor="#BDBDBD"
            android:text="@string/des_intro1"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/title"/>

        <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
            android:id="@+id/wormDotsIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:dotsColor="@color/blue78CFCE"
            app:dotsCornerRadius="@dimen/_10sdp"
            app:dotsSize="@dimen/_6sdp"
            app:dotsSpacing="4dp"
            app:dotsStrokeColor="#969696"
            app:dotsStrokeWidth="@dimen/_3sdp"
            app:layout_constraintTop_toBottomOf="@id/des"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/stvNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Next"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            style="@style/robotoMedium18"
            app:strokeColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wormDotsIndicator" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>